Changed to relative path

--- a/resources/site/map.html
+++ b/resources/site/map.html
@@ -31,7 +31,7 @@ let blocked = false;
 let step1_blocked = false;
  var marker = 0;
  var markerlayer1, markerlayer2, polyline;
- const baseUrl = "http://localhost:8000/"
+ const baseUrl = "/"
  var origin, target;
  let startNode, targetNode;
  function onMapClick(e) {
