--- a/resources/site/map.html
+++ b/resources/site/map.html
@@ -33,16 +33,15 @@
         }
 
         app {
-            height: 13vh;
-            max-height: 13vh;
+            height: 15vh;
         }
     </style>
 
 </head>
 <body>
-<div id="map" class="main" style="height: 87vh"></div>
+<div id="map" class="main" style="height: 85vh"></div>
 <div id="app">
-    <div class="container">
+    <div class="container" style="transform: translateY(5%)">
         <div class="row">
             <form class="col s9">
                 <div class="row">
